src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Manrope", sans-serif;
  /* color: #ababab; */
  height: 100%;
  /* background-color: #141414; */
}
.wallpaper {
  position: relative;
}

.dark {
  background-color: #141414;
  color: slategrey;
}

.light {
  background-color: #f4f3ee;
  color: #463f3a;
}

.wallpaper::before {
  height: 100%;
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  /* background-image: url("/src/assets/images/movie-wallpaper.jpg"); */
  /* background-color: #141414; */
  background-repeat: no-repeat;
  background-size: cover;
  /* opacity: 0.5; Adjust this value to change the opacity */
  z-index: -1;
}

